[package]
name = "ctx-desktop-ipc"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
anyhow = { workspace = true }
ctx-client = { path = "../ctx-client" }
serde = { workspace = true }
serde_json = { workspace = true }
ts-rs = { version = "10.1.0", features = ["no-serde-warnings", "serde-json-impl"] }
