load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_test")

package(default_visibility = ["//visibility:public"])

CTX_DOCS_MIRROR_DEPS = [
    "@crates//:anyhow",
    "@crates//:chrono",
    "@crates//:clap",
    "@crates//:flate2",
    "@crates//:html2md",
    "@crates//:regex",
    "@crates//:reqwest",
    "@crates//:serde",
    "@crates//:serde_json",
    "@crates//:tempfile",
    "@crates//:tokio",
    "@crates//:toml",
    "@crates//:url",
]

rust_library(
    name = "lib",
    crate_name = "ctx_docs_mirror",
    crate_root = "src/lib.rs",
    edition = "2021",
    srcs = glob(["src/**/*.rs"]),
    deps = CTX_DOCS_MIRROR_DEPS,
)

rust_binary(
    name = "ctx-docs-mirror",
    crate_root = "src/main.rs",
    edition = "2021",
    srcs = ["src/main.rs"],
    deps = [
        ":lib",
        "@crates//:anyhow",
        "@crates//:tokio",
    ],
)

rust_test(
    name = "unit_tests",
    crate = ":lib",
)
